
//连接DB服务器
message System_ConnectDBServerC2S{
	required string ServerName = 1;
}

//连接DB服务器返回
message System_ConnectDBServerS2C{
	
}

//连接Transfer服务器
message System_ConnectTransferServerC2S{
	required string ServerName = 1;
	required uint32 ServerID = 2;
}

//连接Transfer服务器返回
message System_ConnectTransferServerS2C{
	
}

//连接World服务器
message System_ConnectWorldServerC2S{
	required string ServerName = 1;
	required uint32 ServerID = 2;
}

//连接World服务器返回
message System_ConnectWorldServerS2C{
}

//通知游戏服务器用户上线
message System_ClientSessionOnlineC2S{
	required uint64 SessionID = 1;
	required string Network = 2;
	required string Addr = 3;
	required uint32 GameServerID = 4;
}

//通知游戏服务器用户下线
message System_ClientSessionOfflineC2S{
	required uint64 SessionID = 1;
}

//通知游戏服务器用户登录成功
message System_ClientLoginSuccessC2S{
	required uint64 UserID = 1;
	required string UserName = 2;
	required uint64 SessionID = 3;
}

//通知游戏服务器用户登录成功返回
message System_ClientLoginSuccessS2C{
	required uint64 UserID = 1;
	required string UserName = 2;
	required uint64 SessionID = 3;
	required uint32 GameServerID = 4;
}